--- a/index.html
+++ b/index.html
@@ -81,10 +81,7 @@
           </div>
         </div>
         <div class="hero_logo">
-          <img
-            src="assets/acn-logo-zip-file/png/logo-no-background.png"
-            alt=""
-          />
+          <img src="assets/logo-no-background.png" alt="" />
         </div>
       </div>
     </section>
