--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <span class="hamburger"></span>
         </button>
         <!-- <a class="logo" href="#home">ACN/> </a> -->
-        <a class="logo" href="#home">Adrian C. Nichifor </a>
+        <a class="logo" href="index.html">ANC/></a>
         <nav class="nav">
           <ul class="nav__list nav__list--primary">
             <li class="nav__item">
@@ -69,15 +69,17 @@
     <section class="hero" id="home">
       <div class="container row">
         <div class="hero__text">
-          <p class="hero_toptitle">Hey, I`m <strong>Adrian</strong></p>
+          <h2 class="hero_toptitle">Hey, I`m <strong>Adrian</strong></h2>
           <h1 class="hero_title">Junior Web Developer</h1>
           <p class="hero_subtitle">
             Enthusiast Web developer with<br />
             a knack for problem-solving
           </p>
           <div>
-            <a href="ACN_CV.pdf" download="ACN_CV" class="btn">My CV</a>
             <a href="#contact" class="btn">Let`s talk</a>
+            <a href="ACN_CV.pdf" download="ACN_CV" class="btn btn_action"
+              >My CV</a
+            >
           </div>
         </div>
         <div class="hero_logo">
@@ -89,94 +91,100 @@
 
     <!-- About section -->
     <section class="about" id="about">
-      <h2 class="section_toptitle">About</h2>
-      <h1 class="section_title container">Web developer journey</h1>
-      <div class="container row">
-        <div class="portret_container">
-          <img
-            src="assets/portret.jpg"
-            alt="portrait of Adrian Nichifor"
-            class="about__img"
-          />
-        </div>
-        <div class="text_container">
-          <p>
-            Proficient in HTML and CSS, with a focus on JavaScript, I thrive on
-            turning ideas into polished, responsive web applications. I'm an
-            open-minded, dedicated, and motivated person, always eager to learn
-            and bring my positive energy to any task. I am confident that I can
-            bring a proactive attitude and a desire to work on any project I am
-            involved in.
-          </p>
-          <!-- <p>
+      <div class="container">
+        <h3 class="section_toptitle">About</h3>
+        <h2 class="section_title container">Web developer journey</h2>
+        <div class="row">
+          <div class="portret_container">
+            <img
+              src="assets/portret.jpg"
+              alt="portrait of Adrian Nichifor"
+              class="about__img"
+            />
+          </div>
+          <div class="text_container">
+            <p>
+              Proficient in HTML and CSS, with a focus on JavaScript, I thrive
+              on turning ideas into polished, responsive web applications. I'm
+              an open-minded, dedicated, and motivated person, always eager to
+              learn and bring my positive energy to any task. I am confident
+              that I can bring a proactive attitude and a desire to work on any
+              project I am involved in.
+            </p>
+            <!-- <p>
             As a Web Developer, I am highly focused on delivering high-quality,
             user-friendly web applications that meet the needs of clients and
             end users.
           </p> -->
-          <p>
-            In my spare time, you'll find me reading articles or watching videos
-            about technology, cooking, cycling, or spending time with my family.
-            These activities not only give me a much-needed break but also
-            inspire me to think creatively and approach problem-solving from
-            different perspectives.
-          </p>
+            <p>
+              In my spare time, you'll find me reading articles or watching
+              videos about technology, cooking, cycling, or spending time with
+              my family. These activities not only give me a much-needed break
+              but also inspire me to think creatively and approach
+              problem-solving from different perspectives.
+            </p>
+          </div>
         </div>
       </div>
     </section>
     <!-- End About section -->
 
     <!-- My work section -->
-    <section class="container" id="work">
-      <h2 class="section_toptitle">My work</h2>
-      <div class="cards_container">
-        <div class="card">
-          <h3>CAMMI</h3>
-          <div class="card_body">
-            <img src="assets/cammi.png" alt="cammi screenshot" />
-            <p class="card_text">The master final project</p>
-            <div>
-              <a href="https://cammi.netlify.app/" target="_blank" class="btn"
-                ><span>Live</span>
-                <i class="fa-solid fa-up-right-from-square"></i
-              ></a>
-              <a
-                href="https://github.com/adriancnichifor/cammi"
-                target="_blank"
-                class="btn"
-                ><span>GitHub</span
-                ><i
-                  class="fa-solid fa-up-right-from-square"
-                  aria-hidden="true"
-                ></i
-              ></a>
+    <section class="work" id="work">
+      <div class="container">
+        <h2 class="section_toptitle">My work</h2>
+        <div class="cards_container">
+          <div class="card">
+            <h3>CAMMI - Lawyer website</h3>
+            <div class="card_body">
+              <img src="assets/cammi.png" alt="cammi screenshot" />
+              <p class="card_text">
+                Made using Bootstrap, JavaScript, Firebase and Netlify to deploy
+              </p>
+              <div>
+                <a href="https://cammi.netlify.app/" target="_blank" class="btn"
+                  ><span>Live</span>
+                  <i class="fa-solid fa-up-right-from-square"></i
+                ></a>
+                <a
+                  href="https://github.com/adriancnichifor/cammi"
+                  target="_blank"
+                  class="btn"
+                  ><span>GitHub</span
+                  ><i
+                    class="fa-solid fa-up-right-from-square"
+                    aria-hidden="true"
+                  ></i
+                ></a>
+              </div>
             </div>
           </div>
-        </div>
 
-        <div class="card">
-          <h3>Julie choregrapher</h3>
-          <div class="card_body">
-            <img src="assets/julie.png" alt="julie website screenshot" />
-            <p class="card_text">choregrapher website</p>
-            <div>
-              <a
-                target="_blank"
-                href="https://julie-dance.netlify.app/"
-                class="btn live"
-                ><span>Live</span>
-                <i class="fa-solid fa-up-right-from-square"></i
-              ></a>
-              <a
-                target="_blank"
-                href="https://github.com/adriancnichifor/Julie"
-                class="btn gh"
-              >
-                <span>GitHub</span
-                ><i
-                  class="fa-solid fa-up-right-from-square"
-                  aria-hidden="true"
-                ></i
-              ></a>
+          <div class="card">
+            <h3>Julie choregrapher</h3>
+            <div class="card_body">
+              <img src="assets/julie.png" alt="julie website screenshot" />
+              <p class="card_text">choregrapher website</p>
+              <div>
+                <a
+                  target="_blank"
+                  href="https://julie-dance.netlify.app/"
+                  class="btn live"
+                  ><span>Live</span>
+                  <i class="fa-solid fa-up-right-from-square"></i
+                ></a>
+                <a
+                  target="_blank"
+                  href="https://github.com/adriancnichifor/Julie"
+                  class="btn gh"
+                >
+                  <span>GitHub</span
+                  ><i
+                    class="fa-solid fa-up-right-from-square"
+                    aria-hidden="true"
+                  ></i
+                ></a>
+              </div>
             </div>
           </div>
         </div>
@@ -186,32 +194,34 @@
 
     <!-- Contact section -->
     <section class="contact" id="contact">
-      <h2 class="section_toptitle">Contact</h2>
-      <div class="container row">
-        <p>
-          Ready to work with me?<br />
-          Let`s chat! ->
-        </p>
+      <div class="container">
+        <h2 class="section_toptitle">Contact</h2>
+        <div class="row light">
+          <p>
+            Ready to work with me?<br />
+            Let`s chat! ->
+          </p>
 
-        <p>
-          Phone: <br />
-          <a class="link" href="tel:+40752407798"
-            ><strong>+4 0752 407 798</strong></a
-          >
-        </p>
-        <p>
-          Email: <br />
-          <a class="link" href="mailto:adriancnichifor@gmail.com"
-            ><strong>adriancnichifor@gmail.com</strong></a
-          >
-        </p>
+          <p>
+            Phone: <br />
+            <a class="link" href="tel:+40752407798"
+              ><strong>+4 0752 407 798</strong></a
+            >
+          </p>
+          <p>
+            Email: <br />
+            <a class="link" href="mailto:adriancnichifor@gmail.com"
+              ><strong>adriancnichifor@gmail.com</strong></a
+            >
+          </p>
+        </div>
       </div>
     </section>
 
     <!-- End Contact section -->
 
     <!-- Footer -->
-    <footer id="footer" class="footer">
+    <footer id="footer" class="footer light">
       <p><strong>ACN</strong> | All rights reserved &copy; 2024</p>
     </footer>
 
