--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
     <section class="hero" id="home">
       <div class="container row">
         <div class="hero__text">
-          <h2 class="hero_toptitle">Hey, I`m <strong>Adrian</strong></h2>
+          <h2 class="hero_toptitle">
+            Hey, I`m <strong class="dark_text">Adrian</strong>
+          </h2>
           <h1 class="hero_title">Junior Web Developer</h1>
           <p class="hero_subtitle">
             Enthusiast Web developer with<br />
@@ -93,7 +95,9 @@
     <section class="about" id="about">
       <div class="container">
         <h3 class="section_toptitle">About</h3>
-        <h2 class="section_title container">Web developer journey</h2>
+        <h2 class="section_title container light_text">
+          Web developer journey
+        </h2>
         <div class="row">
           <div class="portret_container">
             <img
@@ -132,7 +136,10 @@
     <!-- My work section -->
     <section class="work" id="work">
       <div class="container">
-        <h2 class="section_toptitle">My work</h2>
+        <h3 class="section_toptitle">My work</h3>
+        <h2 class="section_title container dark_text">
+          Things I've built so far
+        </h2>
         <div class="cards_container">
           <div class="card">
             <h3>CAMMI - Lawyer website</h3>
@@ -164,7 +171,9 @@
             <h3>Julie choregrapher</h3>
             <div class="card_body">
               <img src="assets/julie.png" alt="julie website screenshot" />
-              <p class="card_text">choregrapher website</p>
+              <p class="card_text">
+                Made using HTML, CSS, JavaScript and Netlify to deploy
+              </p>
               <div>
                 <a
                   target="_blank"
