--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
           </h3>
           <div class="hero_btns">
             <a href="#contact" class="btn">Let`s talk</a>
-            <a href="ACN_CV.pdf" download="ACN_CV" class="btn btn_action"
+            <a
+              href="https://drive.google.com/file/d/1yxqWbE0sGLL68dZnd3dpcWG6ZlzPg8HW/view?usp=drive_link"
+              target="_blank"
+              class="btn btn_action"
               >My CV</a
             >
           </div>
@@ -157,25 +160,19 @@
                 </div>
 
                 <div class="card-content">
-                  <h2 class="name">Julie choregrapher</h2>
+                  <h2 class="name">Julie Portanguen</h2>
                   <p class="description">
-                    Made using HTML, CSS, JavaScript and Netlify to deploy
+                    Online yoga courses website made in WordPress, Elementor,
+                    TutorLMS
                   </p>
 
                   <div class="card_btns">
                     <a
                       target="_blank"
-                      href="https://julie-dance.netlify.app/"
+                      href="https://julieportanguen.com/"
                       class="btn live"
                       ><span>Live</span>
                       <i class="fa-solid fa-up-right-from-square"></i
-                    ></a>
-                    <a
-                      target="_blank"
-                      href="https://github.com/adriancnichifor/Julie"
-                      class="btn gh"
-                    >
-                      <span>Code</span><i class="fa-brands fa-github"></i
                     ></a>
                   </div>
                 </div>
@@ -259,7 +256,7 @@
                   <span class="overlay"></span>
 
                   <div class="card-image">
-                    <img src="assets/julie.png" alt="" class="card-img" />
+                    <img src="assets/julie.webp" alt="" class="card-img" />
                   </div>
                 </div>
 
@@ -293,7 +290,7 @@
                   <span class="overlay"></span>
 
                   <div class="card-image">
-                    <img src="assets/cammi.png" alt="" class="card-img" />
+                    <img src="assets/cammi.webp" alt="" class="card-img" />
                   </div>
                 </div>
 
@@ -328,7 +325,7 @@
 
                   <div class="card-image">
                     <img
-                      src="assets/Weather.png"
+                      src="assets/weather.webp"
                       alt="weather app screenshot"
                       class="card-img"
                     />
