--- a/index.html
+++ b/index.html
@@ -155,24 +155,30 @@
                   <span class="overlay"></span>
 
                   <div class="card-image">
-                    <img src="assets/julie.png" alt="" class="card-img" />
+                    <img src="assets/julie.webp" alt="" class="card-img" />
                   </div>
                 </div>
 
                 <div class="card-content">
-                  <h2 class="name">Julie Portanguen</h2>
+                  <h2 class="name">Julie choregrapher</h2>
                   <p class="description">
-                    Online yoga courses website made in WordPress, Elementor,
-                    TutorLMS
+                    Made using HTML, CSS, JavaScript and Netlify to deploy
                   </p>
 
                   <div class="card_btns">
                     <a
                       target="_blank"
-                      href="https://julieportanguen.com/"
+                      href="https://julie-dance.netlify.app/"
                       class="btn live"
                       ><span>Live</span>
                       <i class="fa-solid fa-up-right-from-square"></i
+                    ></a>
+                    <a
+                      target="_blank"
+                      href="https://github.com/adriancnichifor/Julie"
+                      class="btn gh"
+                    >
+                      <span>Code</span><i class="fa-brands fa-github"></i
                     ></a>
                   </div>
                 </div>
@@ -183,7 +189,7 @@
                   <span class="overlay"></span>
 
                   <div class="card-image">
-                    <img src="assets/cammi.png" alt="" class="card-img" />
+                    <img src="assets/cammi.webp" alt="" class="card-img" />
                   </div>
                 </div>
 
@@ -210,46 +216,6 @@
                     ></a>
                   </div>
                 </div>
-              </div>
-              <!-- Weather project -->
-              <div class="card swiper-slide">
-                <div class="image-content">
-                  <span class="overlay"></span>
-
-                  <div class="card-image">
-                    <img
-                      src="assets/Weather.png"
-                      alt="weather app screenshot"
-                      class="card-img"
-                    />
-                  </div>
-                </div>
-
-                <div class="card-content">
-                  <h2 class="name">Weather app</h2>
-                  <p class="description">
-                    Made using HTML, CSS, JavaScript, OpenWeather, Google Maps
-                    and Netlify to deploy
-                  </p>
-
-                  <div class="card_btns">
-                    <a
-                      target="_blank"
-                      href="https://acn-weatherapp.netlify.app/"
-                      class="btn live"
-                      ><span>Live</span>
-                      <i class="fa-solid fa-up-right-from-square"></i
-                    ></a>
-                    <a
-                      target="_blank"
-                      href="https://github.com/adriancnichifor/WeatherApp"
-                      class="btn gh"
-                    >
-                      <span>Code</span><i class="fa-brands fa-github"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
               <!-- Julie project -->
               <div class="card swiper-slide">
                 <div class="image-content">
