--- a/index.html
+++ b/index.html
@@ -160,92 +160,19 @@
                 </div>
 
                 <div class="card-content">
-                  <h2 class="name">Julie choregrapher</h2>
+                  <h2 class="name">Julie Portanguen</h2>
                   <p class="description">
-                    Made using HTML, CSS, JavaScript and Netlify to deploy
+                    Online yoga courses website made in WordPress, Elementor,
+                    TutorLMS
                   </p>
 
                   <div class="card_btns">
                     <a
                       target="_blank"
-                      href="https://julie-dance.netlify.app/"
+                      href="https://julieportanguen.com/"
                       class="btn live"
                       ><span>Live</span>
                       <i class="fa-solid fa-up-right-from-square"></i
-                    ></a>
-                    <a
-                      target="_blank"
-                      href="https://github.com/adriancnichifor/Julie"
-                      class="btn gh"
-                    >
-                      <span>Code</span><i class="fa-brands fa-github"></i
-                    ></a>
-                  </div>
-                </div>
-              </div>
-              <!-- Cammi project -->
-              <div class="card swiper-slide">
-                <div class="image-content">
-                  <span class="overlay"></span>
-
-                  <div class="card-image">
-                    <img src="assets/cammi.webp" alt="" class="card-img" />
-                  </div>
-                </div>
-
-                <div class="card-content">
-                  <h2 class="name">CAMMI - Lawyer website</h2>
-                  <p class="description">
-                    Made using Bootstrap, JavaScript, Firebase and Netlify to
-                    deploy
-                  </p>
-
-                  <div class="card_btns">
-                    <a
-                      href="https://cammi.netlify.app/"
-                      target="_blank"
-                      class="btn"
-                      ><span>Live</span>
-                      <i class="fa-solid fa-up-right-from-square"></i
-                    ></a>
-                    <a
-                      href="https://github.com/adriancnichifor/cammi"
-                      target="_blank"
-                      class="btn"
-                      ><span>Code</span><i class="fa-brands fa-github"></i
-                    ></a>
-                  </div>
-                </div>
-              <!-- Julie project -->
-              <div class="card swiper-slide">
-                <div class="image-content">
-                  <span class="overlay"></span>
-
-                  <div class="card-image">
-                    <img src="assets/julie.webp" alt="" class="card-img" />
-                  </div>
-                </div>
-
-                <div class="card-content">
-                  <h2 class="name">Julie choregrapher</h2>
-                  <p class="description">
-                    Made using HTML, CSS, JavaScript and Netlify to deploy
-                  </p>
-
-                  <div class="card_btns">
-                    <a
-                      target="_blank"
-                      href="https://julie-dance.netlify.app/"
-                      class="btn live"
-                      ><span>Live</span>
-                      <i class="fa-solid fa-up-right-from-square"></i
-                    ></a>
-                    <a
-                      target="_blank"
-                      href="https://github.com/adriancnichifor/Julie"
-                      class="btn gh"
-                    >
-                      <span>Code</span><i class="fa-brands fa-github"></i
                     ></a>
                   </div>
                 </div>
@@ -301,8 +228,109 @@
                 <div class="card-content">
                   <h2 class="name">Weather app</h2>
                   <p class="description">
-                    Made using HTML, CSS, JavaScript, OpenWeather, Google Maps
-                    and Netlify to deploy
+                    Made using HTML, CSS, JavaScript, OpenWeather and Netlify to
+                    deploy
+                  </p>
+
+                  <div class="card_btns">
+                    <a
+                      target="_blank"
+                      href="https://acn-weatherapp.netlify.app/"
+                      class="btn live"
+                      ><span>Live</span>
+                      <i class="fa-solid fa-up-right-from-square"></i
+                    ></a>
+                    <a
+                      target="_blank"
+                      href="https://github.com/adriancnichifor/WeatherApp"
+                      class="btn gh"
+                    >
+                      <span>Code</span><i class="fa-brands fa-github"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+              <!-- Julie project -->
+              <div class="card swiper-slide">
+                <div class="image-content">
+                  <span class="overlay"></span>
+
+                  <div class="card-image">
+                    <img src="assets/julie.webp" alt="" class="card-img" />
+                  </div>
+                </div>
+
+                <div class="card-content">
+                  <h2 class="name">Julie Portanguen</h2>
+                  <p class="description">
+                    Online yoga courses website made in WordPress, Elementor,
+                    TutorLMS
+                  </p>
+
+                  <div class="card_btns">
+                    <a
+                      target="_blank"
+                      href="https://julieportanguen.com/"
+                      class="btn live"
+                      ><span>Live</span>
+                      <i class="fa-solid fa-up-right-from-square"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+              <!-- Cammi project -->
+              <div class="card swiper-slide">
+                <div class="image-content">
+                  <span class="overlay"></span>
+
+                  <div class="card-image">
+                    <img src="assets/cammi.webp" alt="" class="card-img" />
+                  </div>
+                </div>
+
+                <div class="card-content">
+                  <h2 class="name">CAMMI - Lawyer website</h2>
+                  <p class="description">
+                    Made using Bootstrap, JavaScript, Firebase and Netlify to
+                    deploy
+                  </p>
+
+                  <div class="card_btns">
+                    <a
+                      href="https://cammi.netlify.app/"
+                      target="_blank"
+                      class="btn"
+                      ><span>Live</span>
+                      <i class="fa-solid fa-up-right-from-square"></i
+                    ></a>
+                    <a
+                      href="https://github.com/adriancnichifor/cammi"
+                      target="_blank"
+                      class="btn"
+                      ><span>Code</span><i class="fa-brands fa-github"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+              <!-- Weather project -->
+              <div class="card swiper-slide">
+                <div class="image-content">
+                  <span class="overlay"></span>
+
+                  <div class="card-image">
+                    <img
+                      src="assets/weather.webp"
+                      alt="weather app screenshot"
+                      class="card-img"
+                    />
+                  </div>
+                </div>
+
+                <div class="card-content">
+                  <h2 class="name">Weather app</h2>
+                  <p class="description">
+                    Made using HTML, CSS, JavaScript, OpenWeather and Netlify to
+                    deploy
                   </p>
 
                   <div class="card_btns">
