--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Swipers CSS -->
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" fetchpriority="high" />
   </head>
   <body>
     <header>
